added api for digest generation, fixed logic in service & storage methods, changed migrations
